--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "prettier": "2.2.1"
   }
 }
